added + for Product1 and Product2

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
             <a href="#" class="list-link">Products</a>
             <ul class="sub-list">
                 <li class="sub-list-item">
-                    <a href="#" class="sub-list-link">Product 1</a>
+                    <a href="#" class="sub-list-link">
+                    <span>Product 1</span>
+                    <span>+</span>
+                </a>
                 </li>
                 <li class="sub-list-item">
-                    <a href="#" class="sub-list-link">Product 2</a>
+                    <a href="#" class="sub-list-link">
+                        <span>Product 2</span>
+                        <span>+</span>
+                    </a>
                     <ul class="sub-list-action">
                         <li class="sub-list-item-action">
                             <a href="#" class="sub-list-link-action">Sub Item</a>
