added + for Product1 and Product2

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <ul class="sub-list">
                 <li class="sub-list-item">
                     <a href="#" class="sub-list-link">
-                    <span>Product 1</span>
-                    <span>+</span>
+                    <span class="txt">Product 1</span>
+                    <span class="plus">+</span>
                 </a>
                 </li>
                 <li class="sub-list-item">
                     <a href="#" class="sub-list-link">
-                        <span>Product 2</span>
-                        <span>+</span>
+                        <span class="txt">Product 2</span>
+                        <span class="plus">+</span>
                     </a>
                     <ul class="sub-list-action">
                         <li class="sub-list-item-action">
